finished edit formula with large amounts of bug fixes as well as architectural changes including not storing formula costs (calculated at runtime only), signleton DBHandler class, more reliance on lists of objects (herbs and formulas) created at runtime instead of repeatedly pulling info from the database

--- a/BodyFixTherapiesSystem/BodyFixTherapiesSystem.vcxproj.filters
+++ b/BodyFixTherapiesSystem/BodyFixTherapiesSystem.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="Herb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Formula.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBHandler.h">
