--- a/BodyFixTherapiesSystem/BodyFixTherapiesSystem.vcxproj
+++ b/BodyFixTherapiesSystem/BodyFixTherapiesSystem.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Formula.cpp" />
     <ClCompile Include="FormulaHandler.cpp" />
     <ClCompile Include="Herb.cpp" />
     <ClCompile Include="Money.cpp" />
